<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.niilopoutanen.rss_feed.customization.SettingsHapticsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/feedsettings_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:layout_width="12dp"
                android:layout_height="21dp"
                android:background="@drawable/arrow"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goback"
                android:textColor="?attr/colorAccent" />
        </LinearLayout>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haptics_troubleshoot_header"
            app:fontFamily="@font/inter_semibold"
            android:textSize="15sp"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haptics_troubleshoot_desc"
        android:textColor="@color/textSecondary"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/settings_haptics_troubleshoot_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:background="@drawable/element_background">

        <TextView
            android:id="@+id/vibration_type1"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/element_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/vibration_type2"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/element_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/vibration_type3"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:id="@+id/updatedialog_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        android:background="@drawable/input_background"
        android:backgroundTint="?attr/colorAccent">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:fontFamily="@font/inter_medium"
            android:text="@string/continua"
            android:textColor="@color/textPrimary"/>
    </RelativeLayout>
</LinearLayout>
