<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.niilopoutanen.rss_feed.customization.SettingsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/feedsettings_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <Button
                    android:layout_width="12dp"
                    android:layout_height="21dp"
                    android:background="@drawable/arrow"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goback"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedsettings_header"
                app:fontFamily="@font/inter_semibold"
                android:textSize="15sp"
                android:textColor="@color/textPrimary"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">
            <TextView
                android:id="@+id/feedcardstyle_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_feedcardstyle"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_below="@id/feedcardstyle_header"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:weightSum="6">

                <RelativeLayout
                    android:id="@+id/feedcard_largeimage"
                    android:layout_weight="2"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/feedcard_largeimage"/>

                    <View
                        android:id="@+id/largeimage_checkbox"
                        android:layout_width="25dp"
                        android:tag="false"
                        android:layout_height="25dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/checkbox_unchecked"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/feedcard_smallimage"
                    android:layout_weight="2"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/feedcard_smallimage"/>

                    <View
                        android:id="@+id/smallimage_checkbox"
                        android:layout_width="25dp"
                        android:tag="false"
                        android:layout_height="25dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/checkbox_unchecked"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/feedcard_noimage"
                    android:layout_weight="2"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/feedcard_noimage"/>

                    <View
                        android:id="@+id/noimage_checkbox"
                        android:layout_width="25dp"
                        android:tag="false"
                        android:layout_height="25dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/checkbox_unchecked"/>
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_visible"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_author"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_sourcedesc"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_authorname"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_visible"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_title"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_visible"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_description"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_visible"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_date"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/element_background"
            android:padding="10dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_format"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                app:fontFamily="@font/inter_semibold"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spinner_date"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:backgroundTint="@color/surface"
                android:popupBackground="@drawable/element_background"
                android:textColor="@color/textPrimary"
                android:minWidth="80dp"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>